--- a/task 1/index.html
+++ b/task 1/index.html
@@ -71,9 +71,9 @@
                 </div>
                 <div class="col-4 d-flex align-items-end justify-content-end">
                     <div class=" ">
-                        <button class="cta normalize-btn">
+                        <button class="cta normalize-btn fw-bold">
                             Explore Investment
-                            <i class="fa fa-chevron-right"></i>
+                            <i class="fa fa-share-alt"></i>
                         </button>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                             </h1>
                         </div>
                         <div class="col-6">
-                            <div>
+                            <div class="wave">
                                 <svg width="130" height="96" viewBox="0 0 163 96" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 95L42 82L51 64L85 52L98 36L133 24L162 1" stroke="white" stroke-width="2"/>
                                     </svg>
@@ -121,9 +121,9 @@
                         </div>
                         <div class="col-6">
                             <!-- <img src="./wave.png" alt=""> -->
-                            <div>
-                                <svg width="100" height="88" viewBox="0 0 226 88" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M1 87L31 50H88L106 26L148 38L164 1H199L225 26" stroke="white" stroke-width="4"/>
+                            <div class="wave" >
+                                <svg width="150" height="88" viewBox="0 0 226 88" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 87L31 50H88L106 26L148 38L164 1H199L225 26" stroke="white" stroke-width="2"/>
                                     </svg>
                             </div>
                                 
@@ -144,9 +144,9 @@
                             </h1>
                         </div>
                         <div class="col-6">
-                            <div>
-                                <svg width="100" height="88" viewBox="0 0 226 88" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M1 87L31 50H88L106 26L148 38L164 1H199L225 26" stroke="white" stroke-width="4"/>
+                            <div class="wave">
+                                <svg width="150" height="88" viewBox="0 0 226 88" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 87L31 50H88L106 26L148 38L164 1H199L225 26" stroke="white" stroke-width="2"/>
                                     </svg>
                             </div>
                         </div>
@@ -158,22 +158,31 @@
             </div>
         </section>
     </main>
-    <section class="container bg-white">
-        <div class="brand-container">
-            <img class="" src="./" alt="">
-        </div>
-        <div class="brand-container">
-            <!-- <img class="" src="./inc.png" alt=""> -->
-        </div>
-        <div class="brand-container">
-            <img class="" src="./2560px-NewYorkTimes.svg.png" alt="">
-        </div>
-        <div class="brand-container">
-            <!-- <img class="" src="./forbes.jpg" alt=""> -->
-        </div>
-        <div class="brand-container">
-            <!-- <img class="" src="./bloomberg.png" alt=""> -->
-        </div>
+    <section class="bg-black">
+        <section class="container">
+            <div class="row justify-content-between align-items-center">
+                <div class="brand-container">
+                    <!-- <img class="" src="./" alt=""> -->
+                    <h5>
+                        FEATURED ON
+                    </h5>
+                </div>
+                <div class="brand-container">
+                    <img class="" src="./fast.jpg" alt="">
+                </div>
+                <div class="brand-container">
+                    <img class="" src="./inc.png" alt="">
+                </div>
+                <div class="brand-container">
+                    <img class="" src="./forbes.svg" alt="">
+                </div>
+                <div class="brand-container">
+                    <img class="" src="./boom.jpg" alt="">
+                </div>
+
+            </div>
+        </section>
+
     </section>
     
 </body>
