--- a/task 1/index.html
+++ b/task 1/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
-    <main>
+    <main class="h-80">
         <nav>
             <div class="container">
                  <div class="nav-header d-flex justify-content-between align-items-center">
@@ -158,7 +158,7 @@
             </div>
         </section>
     </main>
-    <section class="bg-black">
+    <section class="bg-black h-20">
         <section class="container">
             <div class="row justify-content-between align-items-center">
                 <div class="brand-container">
